# experiment-objc-like-runtime

./: Array.c  Box.c  Box.h  CMakeLists.txt  Class.h  ClassA.c  ClassB.c  ClassB.h  ClassC.c  ClassC.h  Number.c  Number.h  Object.c  Object.h  Object_Private.h  README.md  String.c  String.h  create_new_class.py  main.c  objc-like.c  object.c  object.h  runtime.c  runtime.h
lolbject/: Anonymous.c  Anonymous.h  Array.c  Array.h  Box.c  Box.h  CMakeLists.txt  Class.h  DefaultAllocator.c  DefaultAllocator.h  LolRuntime.c  Lolbject.c  Lolbject.h  Lolbject_Private.h  MutableArray.c  MutableArray.h  Number.c  Number.h  Object.c  Object.h  Object_Private.h  SignalSender.c  SignalSender.h  String.c  String.h  TreeObject.c  TreeObject.h  api.h  macros.h  runtime.c  runtime.h
mixin_example/: CMakeLists.txt  ClassA.c  ClassA.h  ClassB.c  ClassB.h  ClassC.c  ClassC.h  ClassD.c  module.c  module.h
